--- a/receipts/templates/receipts/list.html
+++ b/receipts/templates/receipts/list.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url "logout" %}">Logout</a></li>
+                {% else %}
+                    <li><a href="{% url "signup" %}">Sign Up</a></li>
+                    <li><a href="{% url "login" %}">Login</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+    </header>
     <main>
         <h1>My Receipts</h1>
         <table>
