--- a/receipts/templates/receipts/categories.html
+++ b/receipts/templates/receipts/categories.html
@@ -12,6 +12,9 @@
             <ul>
                 {% if user.is_authenticated %}
                     <li><a href="{% url "logout" %}">Logout</a></li>
+                    <li><a href="{% url "create_category" %}">Create Category</a></li>
+                    <li><a href="{% url "account_list" %}">Accounts</a></li>
+                    <li><a href="{% url "home" %}">Receipts</a></li>
                 {% else %}
                     <li><a href="{% url "signup" %}">Sign Up</a></li>
                     <li><a href="{% url "login" %}">Login</a></li>
