--- a/receipts/templates/receipts/list.html
+++ b/receipts/templates/receipts/list.html
@@ -12,6 +12,9 @@
             <ul>
                 {% if user.is_authenticated %}
                     <li><a href="{% url "logout" %}">Logout</a></li>
+                    <li><a href="{% url "create_receipt" %}">Create Receipt</a></li>
+                    <li><a href="{% url "category_list" %}">Categories</a></li>
+                    <li><a href="{% url "account_list" %}">Accounts</a></li>
                 {% else %}
                     <li><a href="{% url "signup" %}">Sign Up</a></li>
                     <li><a href="{% url "login" %}">Login</a></li>
